--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -9,7 +9,7 @@
           <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'list-view' %}">Lista</a>
+          <a class="nav-link" href="{% url 'list-products-view' %}">Lista</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled">Disabled</a>
