--- a/templates/product/list.html
+++ b/templates/product/list.html
@@ -9,6 +9,7 @@
       <th scope="col">Nombre</th>
       <th scope="col">Description</th>
       <th scope="col">Precio</th>
+      <th scope="col">Acción</th>
     </tr>
   </thead>
   <tbody>
@@ -18,6 +19,7 @@
       <td>{{product.name}}</td>
       <td>{{product.description}}</td>
       <td>{{product.price}}</td>
+      <td><a class="btn btn-danger" href="{% url 'delete-product-view' product_id=product.id %}">Eliminar</a></td>
     </tr>
   {% endfor %}
   </tbody>
